[package]
name = "rusty-roguelike"
description = "A dungeon crawler with procedurally generated levels, monsters of increasing difficulty, and turn-based movement."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.7"
