[package]
name = "rusty-roguelike"
description = "A dungeon crawler with procedurally generated levels, monsters of increasing difficulty, and turn-based movement."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.7"
legion = "0.4.0"
serde = { version = "1.0.183" }
ron = "0.8.1"

[profile.release]
lto = "thin"
